updated ui with messages

--- a/webapp/knockthon-A.R.M.A.N/www/Server/Views/Home.html
+++ b/webapp/knockthon-A.R.M.A.N/www/Server/Views/Home.html
@@ -11,7 +11,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css"  media="screen,projection"/>
 <!-- Font Awesome -->
-<!--<link rel="stylesheet" href="assets/font/font-awesome.min.css">-->
 <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
 
 <!-- Include roboto.css to use the Roboto web font, material.css to include the theme and ripples.css to style the ripple effect -->
@@ -23,22 +22,22 @@
 
 <!--custom style -->
 <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+<link href="assets/css/tempo.css" rel="stylesheet" type="text/css"> 
 
 <!-- SCRIPTSl===========================================================================-->
 <!-- JQuery -->
 <script type="text/javascript" src="assets/js/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/ripples.min.js"></script>
-    <script type="text/javascript" src="assets/js/material.min.js"></script>
-    <script type="text/javascript" src="assets/js/wow.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.mmenu.min.all.js"></script> 
-    <script type="text/javascript" src="assets/js/count-to.js"></script>   
-    <script type="text/javascript" src="assets/js/jquery.inview.min.js"></script>     
-    <!--<script type="text/javascript" src="assets/js/main.js"></script>-->
-    <script type="text/javascript" src="assets/js/classie.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.nav.js"></script>      
-    <script type="text/javascript" src="assets/js/smooth-on-scroll.js"></script>
-    <script type="text/javascript" src="assets/js/smooth-scroll.js"></script>
+<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="assets/js/ripples.min.js"></script>
+<script type="text/javascript" src="assets/js/material.min.js"></script>
+<script type="text/javascript" src="assets/js/wow.js"></script>
+<script type="text/javascript" src="assets/js/jquery.mmenu.min.all.js"></script> 
+<script type="text/javascript" src="assets/js/count-to.js"></script>   
+<script type="text/javascript" src="assets/js/jquery.inview.min.js"></script>     
+<script type="text/javascript" src="assets/js/classie.js"></script>
+<script type="text/javascript" src="assets/js/jquery.nav.js"></script>      
+<script type="text/javascript" src="assets/js/smooth-on-scroll.js"></script>
+<script type="text/javascript" src="assets/js/smooth-scroll.js"></script>
 <!-- Angular core -->
 <script type="text/javascript" src="assets/js/angular.js"></script>
 <script type="text/javascript" src="assets/js/angular-route.js"></script>
@@ -57,11 +56,11 @@
 <script type="text/javascript" src="assets/shared/Common.js"></script>
 </head>
 <body id="bodydiv" ng-view>  
-    <script>
+    <!--<script>
         $(document).ready(function() {
             // This command is used to initialize some elements and make them work properly
             $.material.init();
         });
-    </script>  
+    </script>  -->
 </body>
 </html>
