--- a/webapp/knockthon-A.R.M.A.N/www/Support/css/style.css
+++ b/webapp/knockthon-A.R.M.A.N/www/Support/css/style.css
@@ -60,3 +60,63 @@ footer.page-footer {
     display: block;
     transform: translate3d(-50%, 113px, 0px);
 }
+
+table {
+font-family: arial, sans-serif;
+border-collapse: separate;
+border-spacing: 1px;
+border-radius: 5px;
+background: #fff;
+margin: 25px auto;
+box-shadow: 0px 0px 5px;
+text-align:center;
+width :100%;
+}
+
+th {
+font-family: calibri;
+font-size: 18px;
+height:57px;
+font-weight: bold;
+text-align: center;
+padding: 20px;
+background-color: #ddeef4  ;
+border-radius: 0 5px 0 0;
+border-bottom: 3px solid  #72b4cc  ;
+}
+th:first-child {
+-moz-border-radius-topleft: 5px;
+-webkit-border-top-left-radius: 5px;
+border-top-left-radius: 5px;
+}
+th:last-child {
+-moz-border-radius-topright: 5px;
+-webkit-border-top-right-radius: 5px;
+border-top-right-radius: 5px;
+}
+
+tr td {
+font-family: cursive;
+font-weight: 700;
+color: blue;
+font-size: 13px;
+padding: 20px 20px 20px 20px;
+border-right: 1px solid #e0e0e0  ;
+transition: all 1s;
+}
+
+tr:nth-child(even) {
+background-color: #dddddd  ;
+}
+
+tbody:hover > tr td { 
+opacity: 0.3;
+*color:transparent;
+text-shadow:(0px 0px 2px rgba(0,0,0,0.8));
+}
+
+tbody:hover > tr:hover td {
+text-shadow: none;
+color: #000;
+opacity: 1
+}
